sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:6: error: value || is not a member of Int
  while (a=0 || ecart ==1 ) {
             ^AlgCombSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while (a=0 || ecart ==1 ) {
          ^